Resolves: tdf#165756 - The spotlight view does not display colored and

numbered boxes beside the names of the styles (GTK3)

This first went missing when the surface attributes were dropped in
commit e3d7473a5611f414bfcf1a3e812248c82f9e9b83 and then again in commit
7f42f031ed1b9f374f3fcba9c814dc5862492026 when set_image replaced setting
the image in insert.

Change-Id: Ib5dd05e11fbc3db8f02a777cf7147bfd2b01ae97
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183213
Tested-by: Jenkins
Tested-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>